# ComfyUI-GameAsset-Workflows

./: .gitignore  README.md  deploy.ps1  pyproject.toml
docs/: deployment-audit.md
docs/superpowers/: 2026-07-17-pose-controlled-pixel-animation-deployment-audit.md
game_asset_api/: __main__.py  animation_contracts.py  animation_inputs.py  animation_motion.py  animation_pipeline.py  animation_stabilization.py  animation_workflow.py  app.py  comfy_client.py  contracts.py  deployment.py  godot_export.py  jobs.py  model_manifest.py  node_manifest.py  pose_runner.py  pose_sequence.py  pose_workflow.py  postprocess.py  prompting.py  repository_audit.py  weapon_composite.py  workflows.py
scripts/: audit_repository.py  create_sword_attack_pose_sequence.py  deploy.py  export_game_asset_workflows.py  export_pose_controlled_workflow.py  export_production_animation_workflow.py  install_game_asset_models.py  install_pose_workflow_nodes.py  run_pose_controlled_action.py  run_production_animation.py  validate_godot_export.py
tests/game_asset_api_test/: test_animation_contracts.py  test_animation_inputs.py  test_animation_motion.py  test_animation_pipeline.py  test_animation_stabilization.py  test_animation_workflow.py  test_app.py  test_contracts.py  test_deployment.py  test_godot_export.py  test_jobs.py  test_model_manifest.py  test_node_manifest.py  test_pose_workflow.py  (+4 more)
workflows/: pixel_character_action_api.json  pixel_character_design_api.json  pose_controlled_pixel_action_api.json  production_animation_api.json  video_wan2_2_5B_ti2v.json  wan2_2_5b_dual_balanced.json
(+11 files in other folders)
