[project]
name = "comfyui-game-asset-workflows"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.8",
    "Pillow>=10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
